@@ -1,5 +1,10 @@
 2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>
 
+	*  src/components/ogre/widgets/Makefile.am:
+		* oops, don't include TerrainEdit just yet. Thanks Kai and James.
+
+2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>
+
 	* configure.ac: bump required Atlas to 0.5.9, Eris to 1.3.5 and Mercator to 0.2.2
 
 2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>
